# genetic-algo-rs

./: README.md
app/: Cargo.toml
app/src/: main.rs
libs/genetic-algorithm/src/: chromosome.rs  crossover.rs  lib.rs  mutation.rs  selection.rs
libs/neural-network/: Cargo.toml
libs/neural-network/src/: layer.rs  lib.rs  neuron.rs
