[package]
name = "shorelark"
version = "0.1.0"
authors = ["rufus-stone <60827786+rufus-stone@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Our stuff
neural-network = { path = "../libs/neural-network" }
genetic-algorithm = { path = "../libs/genetic-algorithm" }

# Logging
log = "0.4.14"
simple_logger = "1.11.0"

rand = "0.8.3"
